  * Merge armeb support, from Lennert Buytenhek (Closes: #335116).
  * Add LSB headers to glibc.sh and nscd init scripts, from Petter
    Reinholdtsen (Closes: #335308, #335343).
  * Remove obsolete mountkernfs, tmpfs, and devpts.sh files from debian/.
  * Temporarily set hppa back to gcc 3.4, from Steve Langasek
    (Closes: #326581).

 -- Daniel Jacobowitz <dan@debian.org>  Sat, 12 Nov 2005 19:06:15 -0500

glibc (2.3.5-7) unstable; urgency=low

  [ GOTO Masanori ]
  * debian/script.in/kernelcheck.sh: Drop real-i386 kernel support.

  [ Daniel Jacobowitz ]
  * Build 64-bit packages on i386 - based on patches from both Ubuntu
    and Andreas Jochens <aj@andaco.de>.
    - Build depend on a biarch linux-kernel-headers package.
    - Build depend on new libc6-dev-amd64 package.
    - Conflict with amd64-libs to avoid stale libraries.
    - Replace files from amd64-libs-dev.
    - Use lib64 for 64-bit libraries on i386.
    - Search lib64 for ldconfig.
    - Install 64-bit headers in /usr/include/x86_64-linux-gnu.
  * Remove obsolete references to NPTL as an add-on.
  * Conflict with broken versions of libterm-readline-gnu-perl
    (Closes: #326856, #326492).
  * Merge makefile patch from Goswin Brederlow
    <brederlo@informatik.uni-tuebingen.de> to fail earlier if builds fail
    (but omit the bit for make -k check) (Closes: #325460).
  * Update debconf dependency to work with cdebconf (Closes: #331838).
  * Merge MIPS <bits/syscall.h> fix from CVS (Closes: #329043).
  * Do not complain about incompatible libraries in /etc/ld.so.conf
    (Closes: #310047).
  * Update hppa assembly for current CVS binutils.
  * Use 8-byte-aligned buffers for doubleword FPU transfers on HPPA
    (Closes: #333766).

 -- Daniel Jacobowitz <dan@debian.org>  Fri, 14 Oct 2005 14:18:22 -0400

glibc (2.3.5-6) unstable; urgency=low

  * GOTO Masanori <gotom@debian.org>
  
    * debian/script.in/kernelcheck.sh: Use sed instead of bash extension.