@@ -128,6 +128,9 @@ define kernel_check
 fi)
 endef
 
+# Include libidn for both NPTL and LinuxThreads targets.
+standard-add-ons = libidn,
+
 # Pull in all the per-arch magic!
 
 -include debian/sysdeps/$(DEB_HOST_ARCH_OS).mk
