@@ -11,8 +11,9 @@ glibc (2.3.5-8) unstable; urgency=low
   * Remove obsolete mountkernfs, tmpfs, and devpts.sh files from debian/.
   * Temporarily set hppa back to gcc 3.4, from Steve Langasek
     (Closes: #326581).
+  * Re-enable libidn (Closes: #181025).
 
- -- Daniel Jacobowitz <dan@debian.org>  Sat, 12 Nov 2005 19:06:15 -0500
+ -- Daniel Jacobowitz <dan@debian.org>  Sat, 12 Nov 2005 19:15:29 -0500
 
 glibc (2.3.5-7) unstable; urgency=low
 
